﻿11.0.10.alpha.1 - 18th September 2024
- For 'Mute mount sounds' ('System'), added 'Rabbits'.  If checked, divine rabbits will be quieter.  This applies to Jade, Bright Foreseer.

11.0.08 - 11th September 2024
- Game API updates.

11.0.07 - 4th September 2024
- For 'Remove transforms' ('System'), added 'Cursed Pickaxe'.  If enabled, the Cursed Pickaxe transform will be removed when applied.
- For 'Mute game sounds' ('System'), added 'Pickaxe'.  If enabled, the Cursed Pickaxe sounds will be muted.
- For 'Media', added zone music for Khaz Algar.  This includes Ringing Deeps, Isle of Dorn, Hallowfall and Azj-Kahet.
- For 'Media', added dungeon music for The War Within.  This includes Ara-Kara, City of Threads, Dawnbreaker, Nerub-ar Palace, Priory of the Sacred Flame and Rookery.
- For 'Media', added movies for Dragonflight.  This includes Fury Incarnate, Crown of Flame, Blessing of Amirdrassil and Iridikron and Vyranoth.  You can watch in Movies and listen in Various > Cinematics.
- For 'Media', added movies for The War Within.  This includes The War Within, Thrall and Anduin, Threads of Destiny, The Story So Far, Dalaran Arrives at Khaz Algar, The Guardian and the Harbinger, Magni's Sacrifice, Ascension Day and Confronting Xal'atath.  You can watch in Movies and listen in Various > Cinematics.

11.0.05 - 21st August 2024
- Added a new option 'Block requested invites'.  If enabled, requests to invite a player to your group will be declined unless the player requesting to join is a friend.
- Removed the 'Show threads of time' option since the Timerunning event has now ended.
- For 'Enhance minimap' ('Interface'), the 'MoveAny' addon button will now show inside the combine addon buttons frame.

11.0.04 - 14th August 2024
- Updated for game patch 11.0.2.

11.0.01 - 24th July 2024
- Welcome to The War Within!
- For 'Enhance minimap', added a button texture for Zygor.
- Updated dropdown menu code.
- Removed Dragonflight transitional code.

10.2.40 - 4th July 2024