@@ -1,5 +1,6 @@
 ﻿11.0.10.alpha.1 - 18th September 2024
 - For 'Mute mount sounds' ('System'), added 'Rabbits'.  If checked, divine rabbits will be quieter.  This applies to Jade, Bright Foreseer.
+- PTR (11.0.5): Removed the 'Show character addons' ('System') option as it's now included in the game.
 
 11.0.08 - 11th September 2024
 - Game API updates.
